Implement log level comparison via between_levels()
This is deliberately minimalist to avoid YAGNI and encourage range based level comparison.

Also:
 Incompatible
 * The emergency and critical log levels have been removed.  They didn't have
   a use case.
 * TB2::Event::Log->levels now returns in order from lowest to highest.

 New Features
 * Added TB2::Event::Log->between_levels() to compare log levels.

 Documentation
 * The suggested meanings of event log levels are now documented.

Closes #111

--- a/Changes
+++ b/Changes
@@ -5,6 +5,15 @@ See README and version control log for Test::Builder2 changes.
     * TB2::Event::Log now uses symbolic levels, not numeric.  This lets us
       add new levels later. [github 111]
     * Event log levels have been lower cased.
+    * The emergency and critical log levels have been removed.  They didn't have
+      a use case.
+    * TB2::Event::Log->levels now returns in order from lowest to highest.
+
+    New Features
+    * Added TB2::Event::Log->between_levels() to compare log levels.
+
+    Documentation
+    * The suggested meanings of event log levels are now documented.
 
 
 2.00_06  Thu, 27 Jan 2011 09:58:35 +1000
