Note that the incompatible changes are only since 2.00_01

--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 See README and version control log for Test::Builder2 changes.
 
 2.00_07
-    Incompatible Changes
+    Incompatible Changes (since 2.00_01)
     * TB2::Event::Log now uses symbolic levels, not numeric.  This lets us
       add new levels later. [github 111]
     * Event log levels have been lower cased.
@@ -17,7 +17,7 @@ See README and version control log for Test::Builder2 changes.
 
 
 2.00_06  Thu, 27 Jan 2011 09:58:35 +1000
-    Incompatible Changes
+    Incompatible Changes (since 2.00_01)
     * The EventCoordinator now only has one history object.
       histories() is now history().  clear_history() and add_histories()
       are gone. [github 115]
