--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
-0.97_02
+0.98
     Bug Fixes
     * subtest() should not fail if $? is non-zero. (Aaron Crane)
+
+    Docs
+    * The behavior of is() and undef has been documented. (Pedro Melo)
 
 
 0.97_01  Fri Aug 27 22:50:30 PDT 2010
