Fix subtests when threads are on.
The shared nature of a scalar value, in this case $self->{Curr_Test} is lost across
a simple hash copy as subtest() was doing.  So we reshare them on copy.

For #145

Signed-off-by: Michael G. Schwern <schwern@pobox.com>

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.98_01
     Bug Fixes
     * BAIL_OUT works inside a subtest. (Larry Leszczynski) [github #138]
+    * subtests now work with threads turned on. [github #145]
 
 
 0.98  Wed, 23 Feb 2011 14:38:02 +1100
