Cleanup the previous use_ok patch.
Code
* Don't obliterate the filename if it has newlines in it, just escape them.
* Document that use_ok works with lexical pragmata
* Eliminate the overly paranoid q/$module/->method syntax.
  You can't write "use Module With A Space In The Name" anyway.
* Don't overload the meaning of $version
* Expand out multiple statements on one line.  We're not paying by the newline.

Tests
* Strip out the now unnecessary PERL_CORE stuff
* Turn on strict and warnings
* Add notes to blocks of tests
* Expand out the line number preservation test to be readable and easier to
  debug on failure.
* Check eval returns true or false, not 1 or undef.  Unnecessarily specific and brittle.

--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@
     Bug Fixes
     * BAIL_OUT works inside a subtest. (Larry Leszczynski) [github #138]
     * subtests now work with threads turned on. [github #145]
+    * use_ok() will continue to have lexical effect on 5.13.7 and forward.
+      [rt.cpan.org 67538] (Father Chrysostomos)
 
     Misc
     * Test::More, Test::Simple and Test::Builder::Module now require
