Per https://github.com/schwern/test-more/issues/161, replace stream_start with test_start and stream_end with test_end.

--- a/lib/Test/Builder2/Design.pod
+++ b/lib/Test/Builder2/Design.pod
@@ -32,7 +32,7 @@ Fundamentally, TB2 coordinates these things:
 
 =over 4
 
-=item Record when a stream starts and ends
+=item Record when a test starts and ends
 
 This allows setting of the plan, if any, and maybe printing out headers.
 
