Eliminate the attribute aliases in Result.
Use the simpler, shorter, more straightforward names.  We never really fleshed out
how the generic versions will work and they just confuse things.  Maybe they'll come
back later.

For #182

--- a/lib/Test/Builder2/Design.pod
+++ b/lib/Test/Builder2/Design.pod
@@ -277,10 +277,10 @@ example, here is a simple implementation of is().
         my($have, $want, $name) = @_;
 
         my $result = ok( $have eq $want, $name );
-        $result->diagnostics(
+        $result->diag([
             have => $have,
             want => $want
-        );
+        ]);
 
         return $result;
     };
@@ -338,10 +338,10 @@ expand on the is() example above:
         
         my $ok = ok $have, $want, $name;
 
-        $ok->diagnostics(
+        $ok->diag([
             have => $have,
             want => $want,
-        );
+        ]);
 
         return $ok;
     }
