--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.98_01
+0.98_01  Tue Nov  8 17:07:58 PST 2011
     Bug Fixes
     * BAIL_OUT works inside a subtest. (Larry Leszczynski) [github #138]
     * subtests now work with threads turned on. [github #145]
